--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,7 +13,7 @@ body {
   color: white; 
   padding: 1em;
   height: 100vh;
-  background-color: $color;
+  // background-color: $color;
 }
 
 h1 {
