--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,2 +1,20 @@
-// all variables for scss here
+// colors
+$white: rgba(255, 255, 255, 1);
+$white_90: rgba(255, 255, 255, 0.9);
+$darker_blue_100: rgba(0,0,79,1);
+$darker_blue_70: rgba(0,0,79,0.7);
+$darker_blue_60: rgba(0,0,79,0.6);
+$lighter_blue: rgba(0, 81, 168, 1);
+
+// font-sizes
+$xlarge: 2.0625rem;
+$large: 1.25rem;
+$medium: 0.875rem;
+$regular: 0.75rem;
+$small: 0.625rem;
+// $quote: 0.813rem; 
+
+// padding
+$standardp: 1rem;
+
 
