--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,7 +8,7 @@
 
 // just some example styles
 body {
-  background: url('../images/icon.png');
+  //background: url('../images/icon.png');
   background-repeat: no-repeat;
   background-position: 1.5em 1.3em;
   color: white;
@@ -20,7 +20,7 @@ body {
 h1 {
   padding: 1.8em 5em 2.5em;
   font-size: 1.15em;
-  font-family: Arial, sans;
+  //font-family: Arial, sans;
   font-weight: normal;
   letter-spacing: 6px;
 }
