--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -22,11 +22,14 @@ html {
       font-size: $medium;
       margin-bottom: 10vh;
       border-radius: 2%;
+      border: none;
       width:30vw;
       min-height: 40px;
+      &:hover {
+        background-color: $lighter_blue;
+      }
       @media(max-width: 600px){
       min-width: 300px;
-      
       }
     }
   body {
