funkionierender status wiederhergestellt

--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -1,4 +1,4 @@
-#login{
+.login{
   background-color: $darker_blue_70;
   text-align: center;
   width: 50vw;
@@ -8,20 +8,5 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-<<<<<<< HEAD
-<<<<<<< HEAD
   min-width: 360px;
 }
-=======
-=======
->>>>>>> 49e7148981c68837eaf7baf13f71d168da3a6a22
-  min-width: 360px; 
-  h2{
-    padding-bottom: 5%;
-  }
-<<<<<<< HEAD
-}
->>>>>>> 49e7148981c68837eaf7baf13f71d168da3a6a22
-=======
-}
->>>>>>> 49e7148981c68837eaf7baf13f71d168da3a6a22
