--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -6,8 +6,8 @@
             <h1>1/5</h1>
         </div>
         <div id="header_right">
-            <!--<a href="#">Login</a>
-            <a href="#">Profile</a>-->
+            <a href="#">Login</a>
+            <a href="#">Profile</a>
             <a href="#"><i class="fas fa-times"></i></a>
         </div>
     </header>
