--- a/src/sass/layout/_quiz.scss
+++ b/src/sass/layout/_quiz.scss
@@ -24,3 +24,10 @@
             margin-bottom: 5%;
         }
     }
+
+    #correct{
+        background-color: green;
+    }
+    #wrong{
+        background-color: red;
+    }
