--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -1,10 +1,8 @@
 main {
-  margin-top: 10vh;
+  margin-top: 15vh;
   width: 100vw;
-  background-image: url('../assets/background/background.svg');
   background-size: cover;
-  position: absolute;
-  min-height: 90vh;
+  //min-height: 80vh;
   color: white;
 
   section {
