--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,7 @@
 @import "layout/*";
 
 // just some example styles
-body {
+/*body {
   //background: url('../images/icon.png');
   background-repeat: no-repeat;
   background-position: 1.5em 1.3em;
@@ -32,4 +32,4 @@ button {
 input[type="label"] {
   width: 400px;
   font-size: 1.3em;
-}
+}*/
