--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -3,10 +3,8 @@
   text-align: center;
   width: 50vw;
   margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   min-width: 360px;
+  margin-top: 30%;
+  margin-left: 50%;
 }
