--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -25,6 +25,7 @@
       background-color: $darker_blue_60;
       flex-direction: column;
       padding: 5%;
+      padding-bottom: 0;
       margin:5% auto 0;
       height: auto;
       width: auto;
