--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,25 +1,25 @@
 .header {
   position: fixed !important;
-  z-index: 100;
   top: 0 !important;
   width: 100% !important;
   background-color: $darker_blue_100;
-  height: 10vh;
   min-height: 50px;
-  display: flex;
+   display: flex;
   align-items: center;
   align-self: auto;
   text-align: center;
   justify-content: space-between;
   padding: 10px 0;
   margin-bottom: 10vh;
-
+  &__img{
+    width: 20vw;
+    height: auto;
+   }
   &__div {
+    margin:auo;
     width: 200px;
     height: inherit;
     min-height: 45px;
-
-    // modifier
     &--center {
       display: inherit;
       align-items: inherit;
@@ -32,11 +32,12 @@
     &--right {
       margin-right: 2vw;
       margin-top: auto;
+      margin-bottom: auto;
       text-align: end;
+      @media(max-width: 1000px){
+        margin-top: 2%;
+      }
     }
   }
-  &__img {
-    width: inherit;
-    height: inherit;
-  }
+
 }
