--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -1,10 +1,12 @@
 .login{
   background-color: $darker_blue_70;
   text-align: center;
+  position: absolute;
   width: 50vw;
   margin: 0;
   transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
   min-width: 360px;
-  margin-top: 30%;
-  margin-left: 50%;
 }
