--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -25,6 +25,7 @@
       align-items: inherit;
       text-align: center;
       justify-content: center;
+      margin: auto;
       font-style: italic;
       font-size: $medium;
     }
