--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -32,6 +32,7 @@
 
     &--right {
       margin-right: 2vw;
+      width: 18vw;
       margin-top: auto;
       margin-bottom: auto;
       text-align: end;
