--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -27,11 +27,11 @@
       padding: 5%;
       padding-bottom: 0;
       margin:5% auto 0;
-      height: auto;
+      height: 60vh;
       width: auto;
       border-radius: 2%;
       text-align: center;
-      min-width: 300px;;
+      min-width: 300px;
       @media (max-width: 600px) {
         margin-top: 5%;
         margin-bottom: 50%;
