--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -11,10 +11,8 @@ html {
   a{
     color: white;
     text-decoration: none;
-  }a:hover {
-    background-color: $white;
-    background-color: #f1f1f1;
-    color: $darker_blue_100;
+  }a:hover, a:focus{
+    text-decoration: underline;
     }
     button {
       padding: 5 0 0 5;
