--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -43,8 +43,8 @@
     display: block;
     margin-bottom: 50%;
   
-  &--i:focus, :hover{
-    font-size: $xlarge;
-  }
+  // &--i:focus, :hover{
+  //   font-size: $xlarge;
+  // }
 }
 }
