--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -19,7 +19,7 @@ html {
     padding: 5 0 0 5;
     height: 10vh;
     font-size: $medium;
-    margin-bottom: 10vh;
+    margin-bottom: 5vh;
     border:0;
     border-radius: 2%;
     width:30vw;
@@ -46,6 +46,9 @@ html {
   }
   h2 {
     font-size: 1.3em;
+  }
+  ul {
+    text-align: left;
   }
   code {
     background-color: $white;
