--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -1,50 +1,40 @@
 .profile{
   margin-top: 0;
+  margin-bottom: 20vh;
+  height: auto;
   &__article{
-    display: flex; 
-    @media (max-width: 600px) {
-      display: block;
-    }
+    display: flex;
+    flex-wrap: wrap-reverse;
   }
     &__h1{
       background-color: $darker_blue_60;
       text-align: center;
       width: 50vw;
-      margin: 0;
-      position: absolute;
-      left: 50%;
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
+      margin: auto;
       border-radius: 2%;
       padding: 2%;
       min-width: 300px;
-      @media (max-width: 600px) {
-        position: relative;
-      }
     }
+    &__a{
+      width: 50vh;
+position: absolute;    }
   &__div{
       background-color: $darker_blue_60;
-      flex-direction: column;
       padding: 5%;
       padding-bottom: 0;
       margin:5% auto 0;
-      height: 60vh;
-      width: auto;
+      height: auto;//60vh;
+      width: 30vw;
       border-radius: 2%;
       text-align: center;
       min-width: 300px;
       @media (max-width: 600px) {
         margin-top: 5%;
-        margin-bottom: 50%;
         position:relative;
+        flex-direction: column-reverse;
+        &--heading{
+          flex-direction: column;
+        }
       }
   }
-  &__a{
-    display: block;
-    margin-bottom: 50%;
-  
-  // &--i:focus, :hover{
-  //   font-size: $xlarge;
-  // }
-}
 }
