--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -41,6 +41,9 @@
       @media(max-width: 1000px){
         margin-top: 2%;
       }
+      a:nth-of-type(2)::before{
+        content:"|"
+      }
     }
   }
 }
