--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -28,8 +28,10 @@ html {
     @media(max-width: 600px){
       min-width: 300px;
     }
-    @media(max-width: 360){
+    @media(max-width: 400){
       width: 90%;
+      margin: auto;
+      text-align: center;
     }
   }
   button:hover, button:focus{
@@ -66,6 +68,7 @@ html {
   @media (max-width: 996px) {
     font-size: 20px;
   }
+  
 }
 
 
