--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -10,6 +10,9 @@ main {
     margin-bottom: 0px;
     padding-top: 13vh;
     border-radius: 5px;
+    @media(max-width: 400px){
+      padding-top: 0;
+    }
     
     h1 {
       width: 100%;
