--- a/src/sass/layout/_quiz.scss
+++ b/src/sass/layout/_quiz.scss
@@ -18,6 +18,9 @@
             width: 45vw;
             margin: auto;
             margin-top: 5%;
+            @media(max-width: 400px){
+                height: auto;
+            }
             }
         @media(max-width: 600px){
             display: block;
