--- a/src/sass/layout/_login.scss
+++ b/src/sass/layout/_login.scss
@@ -10,13 +10,8 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   min-width: 360px;
+  padding-top: 5%;
   &__h2{
     margin-bottom: 5%;
   }
-}
-
-.button--login{
-  @media(max-width: 400px){
-    margin-top: 5%;
-    }
 }
