Delete Pipe between links on mobile screen

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -42,7 +42,10 @@
         margin-top: 2%;
       }
       a:nth-of-type(2)::before{
-        content:"|"
+        content:"|";
+        @media(max-width:400px){
+          content: none;
+        }
       }
     }
   }
