--- a/src/sass/layout/_quiz.scss
+++ b/src/sass/layout/_quiz.scss
@@ -21,7 +21,7 @@
             height: 25vh;
             width: 45vw;
             margin: auto;
-            margin-top: 5%;
+            margin-bottom: 5%;
             @media(max-width: 400px){
                 height: auto;
                 min-height: 70px;
