--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -23,7 +23,7 @@ position: absolute;    }
       padding: 5%;
       padding-bottom: 0;
       margin:5% auto 0;
-      height: auto;//60vh;
+      height: auto;
       width: 30vw;
       border-radius: 2%;
       text-align: center;
