--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,8 @@ $darker_blue_100: rgba(0,0,79,1);
 $darker_blue_70: rgba(0,0,79,0.7);
 $darker_blue_60: rgba(0,0,79,0.6);
 $lighter_blue: rgba(0, 81, 168, 1);
+$green: #00BE19;
+$red: #D20019;
 
 // font-sizes
 $xlarge: 2.0625rem;
