--- a/src/sass/layout/_quiz.scss
+++ b/src/sass/layout/_quiz.scss
@@ -34,8 +34,10 @@
     }
 
     #correct{
-        background-color: green;
+        background-color: $green;
+        color:white;
     }
     #wrong{
-        background-color: red;
+        background-color: $red;
+        color:white;
     }
