--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -20,9 +20,9 @@
   &__div{
       background-color: $darker_blue_60;
       padding: 5%;
-      padding-bottom: 0;
+      padding-bottom: 5%;
       margin:5% auto 0;
-      height: auto;
+      //height: auto;
       width: 30vw;
       border-radius: 2%;
       text-align: center;
