Formatted SCSS-files

--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -16,13 +16,13 @@
       min-width: 300px;
     }
     &__a{
-      position: absolute;    }
+      position: absolute;    
+    }
   &__div{
       background-color: $darker_blue_60;
       padding: 5%;
       padding-bottom: 5%;
       margin:5% auto 0;
-      //height: auto;
       width: 30vw;
       border-radius: 2%;
       text-align: center;
