Fix: Back button. again.

--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -16,7 +16,8 @@
       min-width: 300px;
     }
     &__a{
-      position: absolute;    
+      position: absolute; 
+      left: 2%;   
     }
   &__div{
       background-color: $darker_blue_60;
