--- a/src/sass/layout/_login_end.scss
+++ b/src/sass/layout/_login_end.scss
@@ -1,5 +1,5 @@
 .login,
- .end{
+.end{
   background-color: $darker_blue_70;
   text-align: center;
   position: absolute;
@@ -13,4 +13,50 @@
   &__h2{
 margin-bottom: 5%;
   }
+  &__div--challenge {
+    position: absolute;
+    top: 0;
+    padding-top: 13vh;
+    width: inherit;
+    height: 100%;
+    background-color: $darker_blue_70;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+
+    h1 {
+      width: 50%;
+      margin: 0 auto;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    form {
+      display: inherit;
+      justify-content: inherit;
+      flex-direction: column;
+      margin: 0 auto;
+      select {
+        font-size: $medium;
+        text-align: center;
+        max-width: 400px;
+        margin-bottom: 20px;
+        background-color: $lighter_blue;
+        option {
+          color: white;
+          background-color: $darker_blue_100;
+          padding: 10px 20px;
+          margin: 2px 5px;
+          &:selected,
+          &:focus,
+          &:active {
+            color: $darker_blue_100;
+            background-color: white;
+          }
+        }
+      }
+    }
+  }
 }
+
