Update ecaping + style

--- a/src/sass/layout/_profile.scss
+++ b/src/sass/layout/_profile.scss
@@ -37,6 +37,8 @@
       }
     }
     &--challenge {
+      max-height: 60vh;
+      overflow: scroll;
       ul {
         padding: 10px;
         margin: 0;
