Change i to &--i in impressum_privacy.scss

--- a/src/sass/layout/_impressum_privacy.scss
+++ b/src/sass/layout/_impressum_privacy.scss
@@ -9,7 +9,7 @@
     &__a{
         text-align: right;
         text-decoration: underline;
-        i{
+        &--i{
             text-align: right !important;
             margin-top: 200px;
         }
