--- a/src/sass/layout/_login_end.scss
+++ b/src/sass/layout/_login_end.scss
@@ -5,11 +5,11 @@
   position: absolute;
   width: 50vw;
   margin: 0;
-  margin-top: 100px;
   transform: translate(-50%, -50%);
-  top: 50%;
+  ms-transform: translate(-50%, -50%);
+  top: 55%;
   left: 50%;
-  -ms-transform: translate(-50%, -50%);
+  padding: 5% 0;
   min-width: 360px;
   &__h2{
     margin-bottom: 5%;
@@ -17,14 +17,13 @@
   &__div--challenge {
     position: absolute;
     top: 0;
-    padding-top: 10vh;
+    padding-top: 5vh;
     width: inherit;
     height: 100%;
     background-color: rgb(0,0,79);
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 100%;
 
     h1 {
       width: 50%;
@@ -34,28 +33,39 @@
     }
   }
 
+  &__button {
+
+    &--anonym,
+    &--play{
+      margin-bottom: 0;
+    }
+    &--challenge{
+      width: auto;
+    }
+  }
+
   &__form {
     display: inherit;
     justify-content: inherit;
     flex-direction: column;
     margin: 0 auto;
-    select {
-      font-size: $medium;
-      text-align: center;
-      max-width: 400px;
-      margin-bottom: 20px;
-      background-color: $lighter_blue;
-      option {
-        color: white;
-        background-color: $darker_blue_100;
-        padding: 10px 20px;
-        margin: 2px 5px;
-        &:selected,
-        &:focus,
-        &:active {
-          color: $darker_blue_100;
-          background-color: white;
-        }
+  }
+  &__select {
+    font-size: $medium;
+    text-align: center;
+    max-width: 400px;
+    margin: 0 auto 20% auto;
+    background-color: $lighter_blue;
+    option {
+      color: white;
+      background-color: $darker_blue_100;
+      padding: 10px 20px;
+      margin: 2px 5px;
+      &:selected,
+      &:focus,
+      &:active {
+        color: $darker_blue_100;
+        background-color: white;
       }
     }
   }
